# python-package-template

./: pyproject.toml
.lh/: pyproject.toml.json
